fixed the text wrapping issue

--- a/stylesheets/advisor.css
+++ b/stylesheets/advisor.css
@@ -78,7 +78,7 @@ table {
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
-  white-space: nowrap;
+  white-space: normal;
   vertical-align: middle;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
