--- a/stylesheets/chamber.css
+++ b/stylesheets/chamber.css
@@ -125,7 +125,7 @@ table {
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
-  white-space: nowrap;
+  white-space: normal;
   vertical-align: middle;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
@@ -282,7 +282,7 @@ table {
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
-  white-space: nowrap;
+  white-space: normal;
   vertical-align: middle;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
